--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
 	background-color: var(--primary-background);
+	font-size: 14px;
+	letter-spacing: 0.03em;
 }
 
 .list {
@@ -242,14 +244,13 @@ body {
 		letter-spacing: 0.03em;
 		color: var(--title-text-color);
 		background: #F5F4FA;
-			border-radius: 4px;
 			border: none;
+			cursor: pointer;
 }
 .filter-btn:hover,
 .filter-btn:focus {
 	background: #2196F3;
 		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-		border-radius: 4px;
 	color: #FFFFFF;
 }
 
